Details pane evaluation

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
@@ -19,16 +19,22 @@ Select the stack frame in which an evaluation is to be performed.</P>
   </li>
   <li>
 <P CLASS="Para">
-Enter an expression in the Display view or in the Java editor when it is displaying source and it is not read-only.</P>
-  </li>
+Expressions can be entered and evaluated in the following areas:
+<ul>
+<li>Display view</li>
+<li>Details pane of the Expressions view</li>
+<li>Details pane of the Variables view</li>
+<li>Java editor when it is displaying source and it is not read-only</li>
+</ul>
+</li>
   <li>
 <P CLASS="Para">
-In the Display view or in the Java editor, select the expression to be evaluated and select
+Select the expression to be evaluated and select
 <b> <SPAN CLASS="Label">
 Display</SPAN></b>
  or <b> <SPAN CLASS="Label">
 Inspect</SPAN></b>
- from its pop-up menu.
+ from the context pop-up menu.
 The result of evaluating the expression is shown in the Display view (if <SPAN CLASS="Label">
 Display</SPAN>
  was chosen), or in the Expressions view (if <SPAN CLASS="Label">
@@ -47,6 +53,8 @@ Inspect</SPAN>
 <p dir="ltr"><a href="../reference/ref-52.htm">Display view</a><br>
 <a href="../reference/ref-56.htm">Expressions view</a><br>
 <a href="../reference/ref-56c.htm">Expressions view Show Detail Pane</a><br>
+<a href="../reference/ref-74.htm">Variables view</a><br>
+<a href="../reference/ref-showdetailpane.htm">Variables view Show Detail Pane</a><br>
 &nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12"> </p>
