--- a/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
@@ -44,12 +44,12 @@ Eclipse Workbench. The following lists some of them.
 </P>
 <P CLASS="Para">
   <dt>Toolbar rearrange</dt>
-  <dd>You may now rearrange sections of the main toolbar using the mouse.
+  <dd>You may now <a href="../tasks/ttoolbars.htm">rearrange</a> sections of the main toolbar using the mouse.
   </dd>
 </P>
 <P CLASS="Para">
   <dt>Accessibility</dt>
-  <dd>Accessibility features have been added to Eclipse. Accessibility features 
+  <dd><a href="../concepts/accessibility/accessmain.htm">Accessibility</a> features have been added to Eclipse. Accessibility features 
   	help people with a physical disability or those with special needs to use 
   	software products successfully. Some of these features can help everyone
   	use Eclipse more effectively. The <b>Window->Keyboard Shortcuts</b> menu for
@@ -58,24 +58,25 @@ Eclipse Workbench. The following lists some of them.
 <P CLASS="Para">
   <dt>Key bindings</dt>
   <dd>The <b>Window->Editors</b> preference page gives you the option to use 
-  	non-standard key bindings.</dd>
+  	non-standard <a href="../tasks/tkeybindings.htm">key bindings</a>.</dd>
 </P>
 <P CLASS="Para">
   <dt>Label decorations</dt>
-  <dd>There is a new concept of label decorations. Plugins may contribute
-  	information to resource labels and icons. You can select which decorations
-  	you would like to see on the <b>Workbench->Label Decorations</b> preference page.
+  <dd>There is a new concept of <a href="../concepts/cdecorations.htm">label decorations</a>. 
+  	Plugins may contribute information to resource labels and icons. You can 
+  	select which decorations you would like to see on the 
+  	<b>Workbench->Label Decorations</b> preference page.
   </dd>
 </P>
 <P CLASS="Para">
   <dt>External tools</dt>
-  <dd>You can now run arbitrary external tools from within Eclipse and display
-  	output from these tools in the log console view. The Ant support makes
-  	use of this new feature as well.</dd>
+  <dd>You can now run arbitrary <a href="../concepts/cexttools.htm">external tools</a>
+	from within Eclipse and display output from these tools in the log console view. 
+	The Ant support makes use of this new feature as well.</dd>
 </P>
 <P CLASS="Para">
   <dt>Working sets</dt>
-  <dd>Working sets group elements for display in views or for operations on a set 
+  <dd><a href="../concepts/cworkset.htm">Working sets</a> group elements for display in views or for operations on a set 
   	of elements. The Navigator view, Tasks view, the search facility and more 
   	support the use of working sets.  	
   </dd>
@@ -93,9 +94,10 @@ Eclipse Workbench. The following lists some of them.
 </P>
 <P CLASS="Para">
   <dt>Fast views</dt>
-  <dd>Fast views work like other views except they do not take up space in 
-  	your Workbench window. They can easily be hidden and are accessed by toolbar
-  	buttons. Any view can be opened as a fast view.</dd>
+  <dd><a href="../concepts/concepts-21.htm">Fast views</a> work like other views 
+  	except they do not take up space in your Workbench window. They can easily 
+  	be hidden and are accessed by toolbar buttons. Any view can be opened as a 
+  	fast view.</dd>
 </P>
 <P CLASS="Para">
   <dt>Editors</dt>
@@ -116,7 +118,7 @@ Eclipse Workbench. The following lists some of them.
 </P>
 <P CLASS="Para">
   <dt>Quick Fix</dt>
-  <dd>Certain problems displayed in the tasks view may now be fixed automatically,
+  <dd>Certain problems displayed in the tasks view may now be fixed <a href="../tasks/tquickfix.htm">automatically</a>,
   	with a click of the mouse.
   </dd>
 </P>
@@ -133,16 +135,18 @@ Eclipse Workbench. The following lists some of them.
 </dl>
 <p>&nbsp;</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<!-- ADD LINKS DIRECTLY IN ABOVE TOPICS -->
 <br><a href="../concepts/cantsup.htm">Ant support</a>
 </p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<!-- ADD LINKS DIRECTLY IN ABOVE TOPICS -->
 <br><a href="../tasks/ttoolbars.htm">Rearranging the main toolbar</a>
 </p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-<!-- ADD LINKS DIRECTLY IN ABOVE TOPICS -->
 <br><a href="../reference/ref-35.htm">Log console view</a>
+<br><a href="../reference/ref-12.htm">Editors preferences</a>
+<br><a href="../reference/ref-??.htm">Label decorations preferences</a>
+<br><a href="../reference/ref-15.htm">Perspectives preferences</a>
+<br><a href="../reference/ref-10.htm">Workbench preferences</a>
+
 </p>
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
