*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -126,15 +126,21 @@ a local type declaration. Since the Java model doesn't represent local types, th
 declaration will be given to the result collector. </P>
 <P>
 The search engine also tries to give the resource that contains the Java element to the result collector. So if the Java
-element is a method in a compilation unit, the resource will be the corresponding IFile. If the element is contained in 
+element is a method in a compilation unit, the resource will be the corresponding <b>IFile</b>. If the element is contained in 
 a .jar file, the resource will be the .jar file if this .jar file is in the workspace. If it is an external .jar file, then the resource
-will be null. </P>
+will be <b>null</b>. </P>
 
 <H4>
-Source positions<h4>
+Source positions</h4>
+<P>
+Source positions are given relatively to the compilation unit that contains the search result. If the search result is contained in 
+a .jar file, the source positions are relative to the attached source. They are (-1, -1) if there is no source attached to 
+the .jar file. </P>
 
 <H4>
 Accurate versus inaccurate search results</h4>
+<P>
+ </P>
 
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a>
 </P>
