--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
@@ -25,7 +25,10 @@ You can programmatically compile the Java source files in a project using the bu
    myProject.build(IncrementalProjectBuilder.INCREMENTAL_BUILD, myProgressMonitor);
 </pre></font>
 <P >
-For a Java project, this will invoke the Java incremental project builder (along with any other incremental project builders that have been added to the project's build spec). </P>
+For a Java project, this will invoke the Java incremental project builder (along with any other incremental project builders that have been added to the project's build spec). The generated .class files will be written to the designated output folder.
+In the case of a full project build, all the .class files in the output folder are 'scrubbed' to ensure that no stale files are found. Make sure to place all your .class files, for which you do not have corresponding source files, in separate class file folders instead of the output folder (see your project's Properties->Java Build Path->Libraries->Advanced). </P>
+<P >
+Additional resource files are also copied to the output folder. You can control which resource files are copied using the resource filter (see Preferences->Java->Compiler->Other). Filenames are filtered if they match one of the supplied patterns. Entire folders are filtered if their name matches one of the supplied folder names which end in a slash. </P>
 
 
 <h3>
