*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.jdt.doc.isv/questions/index.html
@@ -23,6 +23,10 @@ JDT Core</h2>
     Java code?</a></li>
   <li><a href="../guide/jdt_api_search.htm">How do I use the Java search 
     engine?</a></li>
+  <li><a href="../guide/jdt_api_options.htm">What are the JDT/Core options?
+  </a></li>
+  <li><a href="../guide/jdt_api_codeassist.htm">How do I programmatically use
+    CodeAssist and CodeSelect?</a></li>
   <li><a href="../guide/jdt_int_elements.htm">How are Java projects, folders,
     and files different from regular resources?</a></li>
   <li><a href="../guide/jdt_int_devprocess.htm">What is available in the JDT
