Evaluation in the detail panes

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
@@ -15,15 +15,15 @@ When the VM suspends a thread, the debugger supports expression evaluation in th
 <ol>
   <li>
 <P CLASS="Para">
-Select the stack frame in which an evaluation is to be performed.</P>
+Select the stack frame in which an evaluation is to be performed. For the detail panes of the <b>Variables</b> and <b>Expressions</b> views, the evaluation context will be a selected variable.  If no variable is selected, the selected stack frame will be the context.</P>
   </li>
   <li>
 <P CLASS="Para">
 Expressions can be entered and evaluated in the following areas:
 <ul>
-<li>Display view</li>
-<li>Details pane of the Expressions view</li>
-<li>Details pane of the Variables view</li>
+<li><b>Display</b> view</li>
+<li>Detail pane of the <b>Expressions</b> view</li>
+<li>Detail pane of the <b>Variables</b> view</li>
 <li>Java editor when it is displaying source and it is not read-only</li>
 </ul>
 </li>
