*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -140,7 +140,14 @@ the .jar file. </P>
 <H4>
 Accurate versus inaccurate search results</h4>
 <P>
- </P>
+In most cases, the search result are accurate, meaning that the search engine was able to determine that the given
+match is what was asked for. However in some cases the search engine is unable to do so. The match will be said
+inaccurate. Some posible reasons why a match is inaccurate are:
+<ul>
+<li>The classpath on the project that contains the result is not properly set. For example it refers to a project that is
+      not accesible, a jar on the classpath requires another jar that is not on the classpath, etc.</li>
+<li>The user code would not compile. For example, it refers to a class that is not yet defined.</li>
+</ul> </P>
 
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a>
 </P>
