fixes to concepts

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -6,10 +6,11 @@
 <div class="Section1"> 
   <h1>Java projects</h1>
   <p class="para">A Java project has an associated Java builder that can incrementally 
-    compile Java source files as they are changed. Each Java project maintains 
-    additional information about the type hierarchy and the references and declarations 
-    of Java elements. This information is constantly updated as the user changes 
-    the Java source code. It is not dependent on the builder.</p>
+    compile Java source files as they are changed. </p>
+  <p class="para">A Java project also maintains information about the type hierarchy, 
+    references and declarations of Java elements. This information is constantly 
+    updated as the user changes the Java source code. It is independent of the 
+    builder.</p>
   <p class="para">You can organize Java projects in two different ways:</p>
   <ul type="Disc">
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Using the project as the source 
