--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -7,48 +7,52 @@
   
 <h2>Package Explorer</h2>
 
-  <p class="para">The Package Explorer that is shown by default in the Java 
-    perspective shows the Java element hierarchy of the Java projects in your 
-    workbench. It provides you with a Java-specific view of the resources shown 
-    in the Navigator. The element hierarchy is derived from the project's build 
-    class paths. </p>
+  <p class="para">The Package Explorer view shows the Java element hierarchy of 
+    the Java projects in your workbench. It provides you with a Java-specific 
+    view of the resources shown in the Navigator. The element hierarchy is derived 
+    from the project's build class paths. </p>
   <p class="para">For each project, its source folders and referenced libraries 
     are shown in the tree. You can open and browse the contents of both internal 
     and external JAR files.</p>
   <h2>Hierarchy view</h2>
-  <p class="para">The Type Hierarchy view offers three different ways to look at 
-    a class hierarchy:</p>
+  <p class="para">The Type Hierarchy view offers three different ways to look 
+    at a type hierarchy:</p>
   <ul type="Disc">
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Show the Type Hierarchy</span>
-    <span style="font-size: 10pt; font-family: Arial; "> displays the type hierarchy of a type.</span></li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Show the Supertype Hierarchy</span><span style="font-size: 10pt; font-family: Arial; "> displays the supertype hierarchy of a type.</span></li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Show the Subtype 
-      Hierarchy</span><span style="font-size: 10pt; font-family: Arial; "> displays the supertype hierarchy of a type.</span></li>
+    <li class="MsoNormal" style="color: black; "><b><span style="font-size: 10pt; font-family: Arial; ">Show 
+      the Type Hierarchy</span></b> <span style="font-size: 10pt; font-family: Arial; "> 
+      displays the type hierarchy of a type.</span></li>
+    <li class="MsoNormal" style="color: black; "><b><span style="font-size: 10pt; font-family: Arial; ">Show 
+      the Supertype Hierarchy</span></b><span style="font-size: 10pt; font-family: Arial; "> 
+      displays the supertype hierarchy of a type.</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; "><b>Show 
+      the Subtype Hierarchy</b> displays the supertype hierarchy of a type.</span></li>
   </ul>
   
-<h2>Projects view</h2>
-<p class="para">The Projects view which is shown by default in the Java  
-   Browsing perspective shows Java projects and their source folders. The
-source folders are those defined on the project's Java build path. </p>
-<p class="para">For each project, its source folders and referenced libraries
-     are shown in a tree. You can select projects, source folders and both
-internal      and external JAR files but you can not drill into them. The
-selection is fed into the other views of the Java Browsing perspective.</p>
-<h2>
+  <hr>
+  <h2><b>The following views are most commonly used in the Java Browsing perspective. 
+    </b></h2>
+  <h2>Projects view</h2>  
+  <p class="para">The Projects view shows Java projects, source folders, external 
+    and internal libraries. </p>
+  <p class="para">Note: source folders and libraries (both internal and external) 
+    presented in this view are not expandable. When they are selected, their contents 
+    are shown in the Packages view.</p>
+  <h2>
 </h2><h2>Packages view</h2>
 
-<p>This view which is shown by default in the Java 
-    Browsing perspective shows a list of Java packages. The currently selected element is used to feed this view.<br>
-</p>
+  <p>The Packages view shows a list of Java packages from the currently selected 
+    Java projects, source folders or libraries. Typically, the Projects view is 
+    used to make this selection. <br>
+  </p>
 <h2>
 </h2><h2>Types view</h2>
 
-<p>This view which is shown by default in the Java 
-    Browsing perspective shows a list of Java types. The currently selected element is used to feed this view.<br></p>
+  <p>The Types view shows a list of Java types from the currently selected packages. 
+    Typically, the Packages view is used to make this selection.<br>
+  </p>
 <h2>Members view</h2>
-<p>This view which is shown by default in the Java      Browsing perspective
-shows the content of a type, compilation unit or class file. The currently
-selected element is used to feed this view.<br></p>
+  <p>The Members shows the content of a type, compilation unit or CLASS file. 
+    Typically, the Types view is used to make this selection. </p>
 <p><br>
 <img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
