--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -5,12 +5,11 @@
 <div class="Section1"> 
   <h1>Java search</h1>
   <p class="MsoNormal"><span style="font-size: 10pt; ">The Java searching support 
-    allows you to find precise declarations and references of Java elements (packages, 
+    allows you to find declarations and references of Java elements (packages, 
     types, methods, fields). Searching is supported by an index that is kept up 
     to date in the background as the resources corresponding to Java elements 
-    are changed. The Java search does not need the workspace to have ever been 
-    built. It is still possible to conduct searches when auto-build is turned 
-    off.</span></p>
+    are changed. The Java search operates on workspaces independent of their build 
+    state. For examples, searches can be conducted when auto-build is turned off.</span></p>
   <p class="para">The following searches can be conducted from the pop-up menus 
     of Java elements:</p>
   <table border="1" cellspacing="0" cellpadding="0">
@@ -65,13 +64,13 @@
       </td>
     </tr>
   </tbody></table>
-  <p>Searches can be performed on various scopes:</p>
-  <p><b>Workspace</b> - all projects and files in them are included in this 
-    search</p>
-  <p><b>Hierarchy</b> - only the type hierarchy of the selected element 
-    (or its declaring type's is included in this search</p>
-  <p><b>Working Set</b> - only resources that belong to the chosen working 
-    set are is included in this search</p>
+  <p>The scope of the search is defined as:</p>
+  <p><b>Workspace</b> - all projects and files in the workspace are included in 
+    this search</p>
+  <p><b>Hierarchy</b> - only the type hierarchy of the selected element is included 
+    in this search</p>
+  <p><b>Working Set</b> - only resources that belong to the chosen working set 
+    are included in this search</p>
   <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"></p>
