--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-4.htm
@@ -6,14 +6,20 @@
 <h1 class="Head"> Java builder</h1>
 <p class="Para"> The Java builder uses a compiler that implements the Java Language 
   Specification.</p>
-<p class="Para"> Problems detected by the compiler are classified as either warnings 
-  or errors. The existence of a warning does not effect the execution of the program; 
-  the code executes as if it were written correctly. Errors are problems that 
-  cannot be ignored. </p>
-<p class="Para"> The Java compiler can create CLASS files, even in presence of 
+<p class="Para">&nbsp; </p>
+<p class="Para">Problems detected by the compiler are classified as either warnings 
+  or errors. The existence of a warning does not affect the execution of the program; 
+  the code executes as if it were written correctly. Compile-time errors (as specified 
+  by the Java Language Specification) are always reported as errors by the Java 
+  compiler. For some other types of problems you can, however, specify if you 
+  want the Java compiler to report them as warnings, errors or to ignore them. 
+  To change the default settings, use the <b>Window &gt; Preferences &gt; Java 
+  &gt; Compiler</b> preference page. </p>
+<p class="Para">&nbsp;</p>
+<p class="Para"> The Java compiler can create CLASS files even in presence of 
   compilation errors. However, in the case of serious errors (for example, references 
-  to inconsistent binaries, most likely related to an invalid build path), 
-  the Java builder does not produce any CLASS file.</p>
+  to inconsistent binaries, most likely related to an invalid build path), the 
+  Java builder does not produce any CLASS file.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="cbuildcp.htm">Build class path</a><br>
   <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
