--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -15,34 +15,48 @@
     the corresponding source.</p>
   <p class="para">The editor includes the following features:</p>
   <ul type="Disc">
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Syntax highlighting</span></li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Content/code assist</span></li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Code formatting</span></li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Import assistance</span></li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Integrated debugging features</span></li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Can be configured to either show an entire compilation unit or a single Java element only (to change the setting, use the toolbar button <b>Show Source of Selected Element Only</b>)</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Syntax 
+      highlighting</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Content/code 
+      assist</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Code 
+      formatting</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Import 
+      assistance</span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Integrated 
+      debugging features</span></li>
   </ul>
+</div>
+<div class="Section1">
+  <p>&nbsp;</p>
+  <p><span style="font-size: 10pt; font-family: Arial; ">The Java editor can be 
+    configured to either show an entire compilation unit or a single Java element 
+    only. Tto change the setting, use the toolbar button <b>Show Source of Selected 
+    Element Only</b>.</span></p>
+  <p>&nbsp;</p>
+</div>
+<div class="Section1">
   <p class="para">By default, this editor is activated by either:</p>
   <ul type="Disc">
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">selecting <b>Open With</b> &gt; 
-      <b>Java Editor</b> from a selection's pop-up menu in the Navigator, Package 
-      Explorer or Types view </span></li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">selecting 
+      <b>Open With</b> &gt; <b>Java Editor</b> from a selection's pop-up menu 
+      in the Navigator, Package Explorer or Types view </span></li>
     <li class="MsoNormal" style="color: black; ">clicking a Java file in the Navigator 
-      or Package Explorer (see<b> </b>the <b>&nbsp;Window &gt; Preferences 
-      &gt; Workbench </b>preference page to choose between single and double click 
+      or Package Explorer (see<b> </b>the <b>&nbsp;Window &gt; Preferences &gt; 
+      Workbench </b>preference page to choose between single and double click 
       modes)</li>
-    <li class="MsoNormal" style="color: black; ">clicking a Java type, method or field 
-      in the Package Explorer, Types, Members or Hierarchy view (see<b> </b>the 
-      <b>&nbsp;Window &gt; Preferences &gt; Workbench </b>preference page to choose 
-      between single and double click modes)</li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">single-clicking a currently-open 
-      Java file in the Navigator or Package Explorer. </span></li>
-    <li class="MsoNormal" style="color: black; ">single-clicking a Java type, method 
-      or field (if its compilation unit is currently open) in &nbsp;the Package 
-      Explorer, Types, Members or Hierarchy view</li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">selecting <b>Open</b>
-      from the pop-up menu of either a type or a method in the Hierarchy, Members, 
-      Types or Package Explorer.</span></li>
+    <li class="MsoNormal" style="color: black; ">clicking a Java type, method 
+      or field in the Package Explorer, Types, Members or Hierarchy view (see<b> 
+      </b>the <b>&nbsp;Window &gt; Preferences &gt; Workbench </b>preference page 
+      to choose between single and double click modes)</li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">single-clicking 
+      a currently-open Java file in the Navigator or Package Explorer. </span></li>
+    <li class="MsoNormal" style="color: black; ">single-clicking a Java type, 
+      method or field, with its compilation unit currently open, in &nbsp;the 
+      Package Explorer, Types, Members or Hierarchy view</li>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">selecting 
+      <b>Open</b> from the pop-up menu of either a type or a method in the Hierarchy, 
+      Members, Types or Package Explorer.</span></li>
   </ul>
   <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
