--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
@@ -5,29 +5,30 @@
 <body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
 <div class="Section1"> 
   <h1>Refactoring support</h1>
-  <p class="para">The goal of refactoring is to improve source code without changing 
-    its behavior. Refactoring means behavior-preserving program transformation. 
-    When you refactor your code, your goal is to make a system-wide code change 
-    without affecting the behavior of the system. The JDT helps you automatically 
-    manage refactorings.</p>
-  <p class="para">The JDT supports a number of transformations described in Martin 
-    Fowler's book <span class="title1"><i>Refactoring: Improving the Design of Existing 
-    Code</i></span>, Addison Wesley 1999.</p>
-  <p class="para">When performing a refactoring operation, you can optionally preview 
-    all the impending changes resulting from a refactoring action before you finally 
-    choose to carry them out. Thus, you can execute a refactoring in one of two 
-    different ways: </p>
+  <p class="para">The goal of refactoring (behavior-preserving program transformation) 
+    is to make a system-wide code change without affecting the behavior of the 
+    system. The JDT provides assistance for managing refactorings.</p>
+  <p class="para">The JDT supports a number of transformations (e.g. <i>Extract 
+    Method</i>, <i>Inline Local Variable</i>) described in Martin Fowler's book 
+    <span class="title1"><i>Refactoring: Improving the Design of Existing Code</i></span>, 
+    Addison Wesley 1999.</p>
+  <p class="para">When performing a refactoring operation, you can optionally 
+    preview all the impending changes resulting from a refactoring action before 
+    you choose to carry them out. Thus, you can execute a refactoring in one of 
+    two ways: </p>
   <ul type="Disc">
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Refactoring without preview<br>
-      In a quick refactoring, you skip being notified of potential problems and 
-      the refactoring preview. If a Stop problem is detected, the refactoring 
-      will not be carried out.</span></li>
-    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Refactoring with preview<br>
+    <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">Refactoring 
+      with preview<br>
       In a controlled refactoring, you are notified of potential problems and 
       are given a detailed preview of what the refactoring action will do.</span></li>
+    <li><span style="font-size: 10pt; font-family: Arial; ">Refactoring without 
+      preview<br>
+      In a quick refactoring, the potential problem notification and preview are 
+      omitted. If a Stop problem is detected, the refactoring will be halted and 
+      a list of problems will be displayed.</span></li>
   </ul>
-  <p>Refactoring commands are available from the context menus in may views and 
-    editors.</p>
+  <p>Refactoring commands are available from the context menus of several Java 
+    views (e.g. Package Explorer, Outline) and editors.</p>
   <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
   <p><img border="0" width="159" height="27" id="_x0000_i1026" src="../images/ngrelt.gif" alt="Related tasks"><br>
