--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
@@ -22,7 +22,7 @@
 <ul>
   <li>You need to have the <b>Window &gt; Preference &gt; Java &gt; Editor &gt; 
     Problem Indication &gt; Show problems before compiling</b> checkbox selected.</li>
-  <li>In the Java editor, ff you see an error underlined with a squiggly line, 
+  <li>In the Java editor, if you see an error underlined with a squiggly line, 
     position the caret inside the underlined range and do one of the following: 
     <ul>
       <li>Press <b>Ctrl+1</b> or</li>
@@ -34,6 +34,12 @@
   <li>Select an entry form the list and press <b>Enter</b>.<br>
   </li>
 </ul>
+<p>If you have the <b>Window &gt; Preference &gt; Java &gt; Editor &gt; Problem 
+  Indication &gt; Indicate problems solvable with QuickFix in vertical ruler </b>checkbox 
+  selected, then light bulb icons appear on the left-hand side vertical ruler 
+  to indicate QuickFix'able problems. You can then click on one of the the light 
+  bulb icons to invoke QuickFix.</p>
+<p>&nbsp;</p>
 <p><b>Note:</b> Occassionally, invoking Quick Fix will not suggest any corrections. 
   A message saying '<b>No suggestions available</b>' will be displayed in such 
   cases.</p>
