renamed to shift left/right

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-178.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-178.htm
@@ -13,15 +13,15 @@
 
   
   <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Indenting and outdenting lines of code</title>
+  <title>Shifting lines of code left and right</title>
 
   </head>
 <body bgcolor="#ffffff">
-<h1 class="Head">Indenting and outdenting lines of code</h1>
+<h1 class="Head">Shifting lines of code left and right</h1>
 <p><br>
-  To indent lines of code in the Java editor:</p>
+  To shift lines of code to the right (i.e. indent):</p>
 <ul>
-  <li> Select the lines you wish to comment</li>
+  <li> Select the lines you wish to shift right</li>
   <li>Do one of the following: 
     <ul>
       <li>Press <b>Tab</b> or </li>
@@ -30,9 +30,9 @@
     </ul>
   </li>
 </ul>
-<p>&nbsp;To outdent lines of code in the Java editor:</p>
+<p>To shift lines of code to the left (i.e. outdent):</p>
 <ul>
-  <li> Select the lines you wish to outdent</li>
+  <li> Select the lines you wish to shift left</li>
   <li>Do one of the following: 
     <ul>
       <li>Press <b>Shift+Tab</b> or </li>
