*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-22.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-22.htm
@@ -48,11 +48,14 @@ Manual builds are initiated when you explicitly select a menu item or press the
 equivalent shortcut key. Manual builds can be either full or incremental and can operate over collections of projects 
 or the entire workspace.</li>
 </ul>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-73.htm"><br>
-Building resources</a><br>
-<a href="../tasks/tasks-75.htm">Performing builds manually<br>
-</a><a href="../tasks/tasks-16.htm">Performing builds automatically<br>
-</a><a href="../tasks/tasks-17.htm">Saving resources automatically before a manual build</a><a href="../tasks/tasks-14.htm"><br>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="cexttools.htm">External tools</a>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="../tasks/tasks-73.htm">Building resources</a>
+<br><a href="../tasks/tasks-75.htm">Performing builds manually</a>
+<br><a href="../tasks/tasks-16.htm">Performing builds automatically</a>
+<br><a href="../tasks/tasks-17.htm">Saving resources automatically before a manual build</a><a href="../tasks/tasks-14.htm"><br>
 Changing build order</a></p>
 <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
