renamed 'Package Explorer' to 'Package Explorer view'

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
@@ -111,7 +111,7 @@ match. Search matches are tagged with a search marker in the marker bar.</div>
 From a Java view</h2>
 
 <div CLASS="Para">Java searches can be performed from several views, including
-the Outline, Hierarchy view or the Package Explorer.</div>
+the Outline, Hierarchy view or the Package Explorer view.</div>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
 <caption><THEAD></THEAD><TBODY>
@@ -123,7 +123,7 @@ the Outline, Hierarchy view or the Package Explorer.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the Package Explorer, double-click&nbsp;<span CLASS="Filename">junit.framework.Assert.java</span>
+<div CLASS="Para">In the Package Explorer view, double-click&nbsp;<span CLASS="Filename">junit.framework.Assert.java</span>
 to open it in an editor.</div>
 </td>
 </tr>
@@ -147,7 +147,7 @@ and from its context menu, select References > Workspace.</div>
 <h2>
 From an editor</h2>
 
-<div CLASS="Para">From the Package Explorer, open&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.
+<div CLASS="Para">From the Package Explorer view, open&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.
 In the editor, select the class name&nbsp;<span CLASS="Filename">TestCase</span>
 and from the context menu, select Search > References > Workspace.</div>
 
