--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -24,7 +24,7 @@ In this section, you will learn more about running Java programs in the workbenc
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the Package Explorer, find <SPAN CLASS="Filename">
+In the Package Explorer view, find <SPAN CLASS="Filename">
 junit.textui.TestRunner.java</SPAN>
  and double-click it to open it in an editor.</P>
 </TD>
