--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -24,7 +24,7 @@ In this section, you will debug a Java program.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the Package Explorer in the Java perspective, double-click <SPAN CLASS="Filename">
+In the Package Explorer view in the Java perspective, double-click <SPAN CLASS="Filename">
 junit.samples.VectorTest.java</SPAN>
  to open it in an editor.</P>
 </TD>
@@ -65,7 +65,7 @@ Note:	The breakpoint is blue with no checkmark overlay as the breakpoint is not 
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the Package Explorer, select the <SPAN CLASS="Filename">
+In the Package Explorer view, select the <SPAN CLASS="Filename">
 junit.samples</SPAN>
  package and select the Run menu. Within the Run menu, select Debug As, and then Java Application.</P>
 </TD>
