--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -19,7 +19,7 @@
     <ol>
       <li>
         <p class="Para">
-          In the Package Exporer, expand the JUnit project to see
+          In the Package Explorer view, expand the JUnit project to see
           its packages.
         </p>
       </li>
