--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -26,7 +26,7 @@
         <p class="Para">
           To open the file
           <span class="Filename">junit.samples.VectorTest.java</span>
-          in the Java editor, double click on the file in the Package Explorer.
+          in the Java editor, double click on the file in the Package Explorer view.
         </p>
       </li>
 
@@ -167,8 +167,8 @@
 
         <p class="Para">
           The compilation unit is compiled automatically and
-          errors show up in the Package Explorer, in the Tasks view and on the
-          vertical ruler. In the Package Explorer, the errors are propagated
+          errors show up in the Package Explorer view, in the Tasks view and on the
+          vertical ruler. In the Package Explorer view, the errors are propagated
           up to the project of the compilation unit containing the error.
         </p>
 
