--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -25,7 +25,7 @@ view.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the Package Explorer, find&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.
+<div CLASS="Para">In the Package Explorer view, find&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.
 From its context menu, select&nbsp;<span CLASS="Label">Open Type Hierarchy</span>.
 You can also open type hierarchy view:
 <ul>
@@ -139,7 +139,7 @@ in the Hierarchy view and also opens in an active editor.</div>
 <td><b>8.</b></td>
 
 <td>
-<div CLASS="Para">Activate the Package Explorer and select the package
+<div CLASS="Para">Activate the Package Explorer view and select the package
 junit.framework. Use&nbsp;<span CLASS="Label">Open Type Hierarchy</span>
 from its context menu.</div>
 
