--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -37,7 +37,7 @@ for identifying problems in your code.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">Open&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>
-in the editor from the Package Explorer.</div>
+in the editor from the Package Explorer view.</div>
 </td>
 </tr>
 
@@ -85,7 +85,7 @@ it are recompiled.</div>
 In the Tasks view, the problems are listed</li>
 
 <li CLASS="Item">
-In the Package Explorer, the type hierarchy or the outline view, problem
+In the Package Explorer view, the type hierarchy or the outline view, problem
 ticks appear on affected Java elements and their parent elements&nbsp;</li>
 
 <li CLASS="Item">
