--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -25,7 +25,7 @@ add methods using the code generation actions.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the Package Explorer, select the JUnit project. From
+<div CLASS="Para">In the Package Explorer view, select the JUnit project. From
 the project's context menu, select New > Package or click the&nbsp;<span CLASS="Label">Create
 a Java Package</span> button in the toolbar.</div>
 </td>
@@ -48,7 +48,7 @@ as the name for the new package. Then click&nbsp;<span CLASS="Label">Finish</spa
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the Package Explorer, select the new&nbsp;<span CLASS="Filename">test</span>
+<div CLASS="Para">In the Package Explorer view, select the new&nbsp;<span CLASS="Filename">test</span>
 package and click the&nbsp;<span CLASS="Label">Create a Java Class</span>
 button in the toolbar.</div>
 </td>
