--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -26,7 +26,7 @@ packages.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the Package Explorer, select the&nbsp;<span CLASS="Filename">MyTestCase.java</span>
+<div CLASS="Para">In the Package Explorer view, select the&nbsp;<span CLASS="Filename">MyTestCase.java</span>
 file and drag it into the&nbsp;<span CLASS="Filename">junit.framework</span>
 package. The file is moved, and its package declaration changes to reflect
 the new location.</div>
