--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -41,7 +41,7 @@
           type &quot;JUnit&quot;, then click
           <span class="Label">Finish</span>.
           A new Java perspective opens with the new Java project
-          in the Package Explorer.
+          in the Package Explorer view.
         </p>
 
         <p class="Para">
@@ -58,7 +58,7 @@
 
       <li>
         <p class="Para">
-          In the Package Explorer, make sure that the JUnit project is
+          In the Package Explorer view, make sure that the JUnit project is
           selected. Select the menu item
           <span class="Label">File &gt; Import...</span>.
         </p>
@@ -126,7 +126,7 @@ org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
  
       <li>
         <p class="Para">
-          In the Package Explorer, expand the JUnit project to view the JUnit
+          In the Package Explorer view, expand the JUnit project to view the JUnit
           packages.
         </p>
 
