--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -26,7 +26,7 @@ refactoring.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the Package Explorer, select&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.</div>
+<div CLASS="Para">In the Package Explorer view, select&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.</div>
 </td>
 </tr>
 
